Added MEMORY_ERROR and TERMINATION_ERROR error types reported by slurm. Added 'slurm state' executor result attribute. Slurm now reports exit code only when slurm state is FAILED and gets it from squeue instead of having to call sacct.