@@ -17,34 +17,70 @@ import java.util.List;
 import org.junit.jupiter.api.Test;
 import pipelite.stage.executor.StageExecutorResult;
 import pipelite.stage.executor.StageExecutorResultAttribute;
+import pipelite.stage.executor.StageExecutorState;
 
 public class ErrorTypeTest {
 
   @Test
-  public void from() {
+  public void fromActive() {
     assertThat(ErrorType.from(StageExecutorResult.submitted(), Collections.emptyList())).isNull();
     assertThat(ErrorType.from(StageExecutorResult.active(), Collections.emptyList())).isNull();
+  }
+
+  @Test
+  public void fromSuccess() {
     assertThat(ErrorType.from(StageExecutorResult.success(), Collections.emptyList())).isNull();
+  }
 
-    // Execution error
-    assertThat(ErrorType.from(StageExecutorResult.executionError(), Collections.emptyList()))
+  @Test
+  public void fromNonPermanentError() {
+    assertThat(
+            ErrorType.from(
+                StageExecutorResult.create(StageExecutorState.EXECUTION_ERROR),
+                Collections.emptyList()))
         .isEqualTo(ErrorType.EXECUTION_ERROR);
-
-    // Permanent error
-    StageExecutorResult permanentError = StageExecutorResult.executionError();
-    permanentError.attribute(StageExecutorResultAttribute.EXIT_CODE, "1");
-    assertThat(ErrorType.from(permanentError, List.of(1))).isEqualTo(ErrorType.PERMANENT_ERROR);
-
-    // Internal error
-    assertThat(ErrorType.from(StageExecutorResult.internalError(), Collections.emptyList()))
-        .isEqualTo(ErrorType.INTERNAL_ERROR);
-
-    // Timeout error
-    assertThat(ErrorType.from(StageExecutorResult.timeoutError(), Collections.emptyList()))
+    assertThat(
+            ErrorType.from(
+                StageExecutorResult.create(StageExecutorState.TIMEOUT_ERROR),
+                Collections.emptyList()))
         .isEqualTo(ErrorType.TIMEOUT_ERROR);
-
-    // Lost error
-    assertThat(ErrorType.from(StageExecutorResult.lostError(), Collections.emptyList()))
+    assertThat(
+            ErrorType.from(
+                StageExecutorResult.create(StageExecutorState.MEMORY_ERROR),
+                Collections.emptyList()))
+        .isEqualTo(ErrorType.MEMORY_ERROR);
+    assertThat(
+            ErrorType.from(
+                StageExecutorResult.create(StageExecutorState.TERMINATED_ERROR),
+                Collections.emptyList()))
+        .isEqualTo(ErrorType.TERMINATED_ERROR);
+    assertThat(
+            ErrorType.from(
+                StageExecutorResult.create(StageExecutorState.LOST_ERROR), Collections.emptyList()))
         .isEqualTo(ErrorType.LOST_ERROR);
+    assertThat(
+            ErrorType.from(
+                StageExecutorResult.create(StageExecutorState.INTERNAL_ERROR),
+                Collections.emptyList()))
+        .isEqualTo(ErrorType.INTERNAL_ERROR);
+  }
+
+  @Test
+  public void fromPermanentError() {
+    StageExecutorResult result = StageExecutorResult.create(StageExecutorState.EXECUTION_ERROR);
+    result.attribute(StageExecutorResultAttribute.EXIT_CODE, "1");
+    assertThat(ErrorType.from(result, List.of(1))).isEqualTo(ErrorType.PERMANENT_ERROR);
+  }
+
+  @Test
+  public void isPermentError() {
+    assertThat(ErrorType.PERMANENT_ERROR.isPermanentError()).isTrue();
+    assertThat(ErrorType.TIMEOUT_ERROR.isPermanentError()).isTrue();
+    assertThat(ErrorType.MEMORY_ERROR.isPermanentError()).isTrue();
+
+    assertThat(ErrorType.TERMINATED_ERROR.isPermanentError()).isFalse();
+    assertThat(ErrorType.EXECUTION_ERROR.isPermanentError()).isFalse();
+    assertThat(ErrorType.INTERNAL_ERROR.isPermanentError()).isFalse();
+    assertThat(ErrorType.LOST_ERROR.isPermanentError()).isFalse();
   }
 }
